miscc